# Estelle

./: .autotest  ChangeLog  Makefile.am  Rakefile  aclocal.m4  autogen.sh  build_unit_test  configure.in  estelle.in  intltool-update.in  svn-commit.tmp
cocoa-ui/: Info.plist  main.m  rb_main.rb
cocoa-ui/English.lproj/: InfoPlist.strings
cocoa-ui/Estelle.xcodeproj/: paul.mode1v3  paul.pbxuser  project.pbxproj
ext/taglib/: cmake_install.cmake  config.h  taglib-config  taglib.pc
ext/taglib/.svn/: dir-prop-base  entries
ext/taglib/admin/: acinclude.m4
ext/taglib/admin/.svn/: all-wcprops  entries
ext/taglib/bindings/: Makefile  cmake_install.cmake
ext/taglib/bindings/.svn/: entries
ext/taglib/bindings/c/: Makefile  cmake_install.cmake  taglib_c.pc
ext/taglib/bindings/c/.svn/: entries
ext/taglib/examples/: Makefile  cmake_install.cmake
ext/taglib/examples/.svn/: dir-prop-base  entries
ext/taglib/taglib/: CMakeLists.txt  Makefile  cmake_install.cmake  tplugins.cpp
ext/taglib/taglib/.svn/: entries
ext/taglib/taglib/ape/: Makefile  cmake_install.cmake
ext/taglib/taglib/ape/.svn/: entries
ext/taglib/taglib/audible/: audibleproperties.h  audibletag.h
ext/taglib/taglib/flac/: Makefile  cmake_install.cmake
ext/taglib/taglib/flac/.svn/: dir-prop-base  entries
ext/taglib/taglib/m4a/: mp4file.h  mp4itunestag.h
ext/taglib/taglib/mpc/: Makefile  cmake_install.cmake
ext/taglib/taglib/mpc/.svn/: entries
ext/taglib/taglib/mpeg/: Makefile  cmake_install.cmake
ext/taglib/taglib/mpeg/.svn/: dir-prop-base  entries
ext/taglib/taglib/mpeg/id3v1/: Makefile  cmake_install.cmake
ext/taglib/taglib/mpeg/id3v1/.svn/: entries
ext/taglib/taglib/mpeg/id3v2/: Makefile  cmake_install.cmake
ext/taglib/taglib/mpeg/id3v2/.svn/: dir-prop-base  entries
ext/taglib/taglib/mpeg/id3v2/frames/: Makefile  cmake_install.cmake
ext/taglib/taglib/mpeg/id3v2/frames/.svn/: dir-prop-base  entries
ext/taglib/taglib/ogg/: Makefile  cmake_install.cmake
ext/taglib/taglib/ogg/.svn/: entries
ext/taglib/taglib/ogg/flac/: Makefile  cmake_install.cmake
ext/taglib/taglib/ogg/flac/.svn/: dir-prop-base  entries
ext/taglib/taglib/ogg/vorbis/: Makefile  cmake_install.cmake
ext/taglib/taglib/ogg/vorbis/.svn/: entries
ext/taglib/taglib/rmff/: rmff.h
ext/taglib/taglib/toolkit/: Makefile  cmake_install.cmake
ext/taglib/taglib/toolkit/.svn/: dir-prop-base  entries
ext/taglib/taglib/wav/: wavproperties.h
ext/taglib/tests/: Makefile  cmake_install.cmake
ext/taglib/tests/.svn/: dir-prop-base  entries
lib/: FormatParser.boo  Main.boo  Makefile.am  MusicLibrary.boo  Platform.boo  Reader.boo  Utility.boo  config.rb.in  execute_list.rb  formatparser.rb  library.rb  main.rb  platform.rb  settings.rb  song.rb  taglib.rb  taskqueue.rb  utility.rb
lib/console-ui/: ConsoleHandler.boo
lib/gtk-ui/: ButtonDialog.glade  EntryDialog.glade  EntryDialog.gladep  GtkUIHandler.boo  MainWindow.boo  MainWindow.glade  MainWindow.gladep  buttondialog.rb  buttondialogtest.rb  entryDialog.boo  entrydialog.rb  mainWindow.boo  mainwindow.rb  ruby-glade-create-template.rb  utility.rb
lib/taggers/: README  estelle-taglib.rb  taglib-ruby.rb  taglib.rb
po/: ChangeLog  Makefile.in.in  POTFILES.in  estelle.pot  fr.po
po/de_DE/: estelle.po
po/fr_FR/: estelle.po
taglib-ruby/: Makefile  Makefile.am  extconf.rb  taglib.i  taglib_wrap.cxx  test.rb
test/: test_estelle-taglib.rb  test_execute_list.rb  test_library.rb  test_library_fixture.yaml  test_platform.rb  test_settings.rb  test_song.rb  test_taglib.rb  test_utility.rb
test/missing/: test_platform.rb
test/mocks/: dummy.rb
test/unit/: test_config.rb  test_estelle-taglib.rb  test_execute_list.rb  test_library.rb  test_platform.rb  test_settings.rb  test_song.rb  test_taglib.rb  test_utility.rb
tests/: build_test  library.rb  test_config.rb  test_library.rb  test_platform.rb  test_settings.rb  test_song.rb  test_utility.rb
tests/files/: testfiles.tar.bz2
tests/taggers/: dummy.rb
